--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,18 @@
+#home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 95vh;
+}
+
+#home-content-mail-container {
+  margin-top: 20px;
+  width: 70%;
+  display: flex;
+  justify-content: flex-end;
+}
+
 #home-content {
   display: flex;
   flex-direction: column;
@@ -34,6 +49,7 @@
 
 .home-social-media-container {
   display: flex;
+  justify-content: start;
   gap: 20px;
 }
 
